# rust-auth-service

./: .env.example  Cargo.toml  README.MD  compose.yml  setup.sh
migrations/: 20250420142811_create_users_table.sql  20250607134749_create_roles_table.up.sql  20250607135137_create_user_roles_table.down.sql  20250607135137_create_user_roles_table.up.sql  20250607135546_create_refreash_tokens_table.up.sql  20250607135546_create_refresh_tokens_table.up.sql
src/: config.rs  docs.rs  lib.rs  main.rs
src/auth/: auth.rs  jwt.rs
src/db/: auth.rs  mod.rs  role.rs  user.rs
src/errors/: mod.rs  my_error.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs  cors.rs  rate_limit.rs
src/models/: app.rs  auth.rs  mod.rs  role.rs  user.rs
src/routes/: routes.rs
src/services/: jwt.rs  password.rs
tests/: helpers.rs  login_tests.rs  main_tests.rs  users_tests.rs  utils_password.rs
