[package]
name = "rust-auth-service"
version = "0.0.1"
edition = "2024"

[dependencies]
#web framework
axum = "0.8"
tokio = { version = "1.44.2", features = ["full"] }

#Serialize/Deserialize
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"

#Security
argon2 = "0.5"
jsonwebtoken = "9.3.1"
uuid = { version = "1.16", features = ["v4", "serde"] }

# Middleware e headers
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

#Errors
thiserror = "2.0.12"

#Date and time
chrono = { version = "0.4.40", features = ["serde"] }

#Database
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-native-tls",
  "chrono",
  "macros",
  "postgres",
  "uuid",
] }
sqlx-cli = { version = "0.8.5", features = ["postgres"] }

dotenvy = "^0.15.7"
