[package]
name = "rust-auth-service"
version = "0.0.1"
edition = "2024"

[dependencies]
#web framework
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }

#Serialize/Deserialize
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.141"

#Security
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17", features = ["v4", "serde"] }

# Middleware e headers
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
async-trait = "0.1"
headers = "0.4.1"

#Errors
thiserror = "2.0.12"

#Date and time
chrono = { version = "0.4.41", features = ["serde"] }

#Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "chrono",
  "macros",
  "postgres",
  "uuid",
] }
sqlx-cli = { version = "0.8.6", features = ["postgres"] }

#Env
dotenvy = "^0.15.7"

#Redis
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

#Documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

#Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }